src/test/ui/nested-ty-params.stderr
error[E0401]: can't use generic parameters from outer function
  --> $DIR/nested-ty-params.rs:3:16
   |
LL | fn hd<U>(v: Vec<U> ) -> U {
   |       - type parameter from outer function
LL |     fn hd1(w: [U]) -> U { return w[0]; }
   |        ---     ^ use of generic parameter from outer function
   |        |
   |        help: try using a local generic parameter instead: `hd1<U>`

error[E0401]: can't use generic parameters from outer function
  --> $DIR/nested-ty-params.rs:3:23
   |
LL | fn hd<U>(v: Vec<U> ) -> U {
   |       - type parameter from outer function
LL |     fn hd1(w: [U]) -> U { return w[0]; }
   |        ---            ^ use of generic parameter from outer function
   |        |
   |        help: try using a local generic parameter instead: `hd1<U>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0401`.
